<resources>
    <string name="app_name">Reservation</string>
    <string name="name">Name</string>
    <string name="number">Mobile Number</string>
    <string name="group">Size of group</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="table">Table</string>
    <string name="calendar">Calendar</string>
    <string name="area">Area</string>
    <string name="smoking">Smoking</string>
    <string name="non_smoking">Non-smoking</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>

</resources>